--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Sora', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,3 +9,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1 {
+  font-size: 4.5rem;
+  font-weight: 400;
+  line-height: 1.2;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  line-height: 1.5;
+}
+
+h2 {
+    font-size: xx-large;
+    padding-bottom: 1%;
+    padding-top: 1%;
+    line-height: 1.5;
+}
+
+h3 {
+    font-size: x-large;
+    padding-bottom: 1%;
+    padding-top: 1%;
+    line-height: 1.5;
+}
+
+h4 {
+  font-size: medium;
+  padding-bottom: 2%;
+  padding-top: 1%;
+  line-height: 150%;
+}
+
